<resources>
    <string name="app_name">Dongtai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_name">Mail/Phone Number</string>
    <string name="pwd_name">Password</string>
    <string name="new_user_name">Regist</string>
    <string name="foreget_pwd_name">Forget Password</string>
    <string name="login_name">Login</string>
    <string name="my_device_name">Home</string>
    <string name="experience_name">Intelligent</string>
    <string name="personer_name">Find</string>
    <string name="messages_name">Message</string>
    <string name="pull_to_refresh_pull_label">Pull down to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing...</string>
    <string name="pull_to_refresh_refreshing_success_label">Refresh Success</string>
    <string name="pull_to_refresh_release_label">Release Immediately Refresh</string>
    <string name="pull_to_refresh_from_bottom_pull_label">Pull down to refresh</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">Refresh Success</string>
    <string name="pull_to_refresh_from_bottom_release_label">Release Immediately Refresh</string>
    <string name="register_title">User Registration</string>
    <string name="phone_register">Phone Registration</string>
    <string name="email_register">Email Registration</string>
    <string name="next">Next</string>
    <string name="phone_number">Input mobile phone number</string>
    <string name="email_number">Input mail</string>
    <string name="phone_pwd">Enter password</string>
    <string name="pwd">Enter password again</string>
    <string name="code">Verification code</string>
    <string name="register_code">Get verification code</string>
    <string name="phone_register_btn">Regist</string>
    <string name="already_activite_btn">Has been activated</string>
    <string name="down_complete_click">The download is complete, click to update.</string>
    <string name="down_londing_click">Downloading, clicking Cancel.</string>
    <string name="down_fault_click">Download failed, click to remove.</string>
    <string name="pull_to_refresh_pull_label1">Last Updated: just now</string>
    <string name="pull_loading_old_geng_ganggang">Last Updated: just now</string>
    <string name="pull_loading_old_geng">Last Updated:</string>
    <string name="pull_loading_new_geng">This Update:</string>
    <string name="change_wifi"><u>Replace my wifi</u></string>
    <string name="device_name"><u>Select The Smart Socket</u></string>
    <string name="up">Bind sdk</string>
    <string name="down">Unpacking sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear The Log</string>
    <string name="enablelog">Open the debug log</string>
    <string name="bindcell">Bind the phone number</string>
    <string name="pmsg">Transparent test</string>
    <string name="psmsg">Notification bar test</string>
    <string name="begin">Begin(h)</string>
    <string name="end">End</string>
    <string name="duration">Duration(h)</string>
    <string name="set_heartbeat">Heartbeat(s)</string>
    <string name="send_msg">Send message</string>
    <string name="bind_alias">Bind alias</string>
    <string name="unbind_alias">Unlink the alias</string>
    <string name="about">Intelligent cloud fire security management system, composed of wireless smoke detectors and wireless network cameras, intelligent fire alarm, video surveillance, intelligent cloud platform remote centralized management, to provide customers with exclusive intelligent disaster prevention solutions. Can be widely used in residential quarters, nursing homes, student dormitories, chain stores and other places.</string>
    <string name="about_s">About </string>
    <string name="accept">Accept</string>
    <string name="phone_number_used">Mobile number has been registered</string>
    <string name="account">Account</string>
    <string name="account_already_exists_in_mask_list">The account already exists in the mask list</string>
    <string name="account_info">Account Information</string>
    <string name="account_no_exist">Account does not exist</string>
    <string name="add_contact">Add to the device list</string>
    <string name="add_contacts">Add Device</string>
    <string name="add_success">Added Successfully</string>
    <string name="alarm_control">Alarm Settings</string>
    <string name="alarm_email">Alarm Email</string>
    <string name="alarm_id_must_first_with_zero">Alarm call account is your APP account</string>
    <string name="alarm_id_too_long">The alarm ID can not exceed 9 characters</string>
    <string name="alarm_info">Alarm Information</string>
    <string name="alarm_manager">Alarm Management</string>
    <string name="alarm_mask">Alarm Shielding Equipment</string>
    <string name="alarm_mask_id_too_long">The device ID can not exceed 9 characters</string>
    <string name="alarm_record">Alarm Record</string>
    <string name="alarm_time_interval">Alarm interval(s)</string>
    <string name="all_tel">Device List</string>
    <string name="allarm_ring">Alarm Ringtones</string>
    <string name="allarm_robot">Device:</string>
    <string name="allarm_type">Type:</string>
    <string name="allarm_type1">Smoke Alarm</string>
    <string name="allarm_type2">Motion Detection</string>
    <string name="allarm_type3">External Alarm</string>
    <string name="Allarm_vibrate">Alarm Vibration</string>
    <string name="already_init_passwd">Failed to add, password already exists</string>
    <string name="are_you_sure_delete">Confirm Delete</string>
    <string name="area">Zone</string>
    <string name="audio_video_control">Media Settings</string>
    <string name="auto_start">Auto Start</string>
    <string name="balcony">Balcony</string>
    <string name="basic_Info">Basic Information</string>
    <string name="bedroom">Bedroom</string>
    <string name="bell_ring">Ringtones</string>
    <string name="bell_set">Ringtone Settings</string>
    <string name="binding">Alarm Push Account</string>
    <string name="busy">The other busy line</string>
    <string name="buzzer">Buzzer</string>
    <string name="buzzer_time">Beep Duration(s)</string>
    <string name="calling_to">Calling</string>
    <string name="can_update_in_sd">Can be upgraded from SD card</string>
    <string name="can_update_to">Can be updated to</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_shield">Unblock</string>
    <string name="capture">Screenshot</string>
    <string name="capture_failed">Screenshot Failed</string>
    <string name="capture_success">Screenshot Success</string>
    <string name="change">Change</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone">Bind the phone number</string>
    <string name="channel">Channel</string>
    <string name="chat">Chat</string>
    <string name="check">Check</string>
    <string name="check_device_update">Check the device update</string>
    <string name="check_update">Check Update</string>
    <string name="check_version">Check Update</string>
    <string name="china">China</string>
    <string name="clear_code">Clear</string>
    <string name="clear_code_prompt">Are you sure to clear?</string>
    <string name="clear_confirm">Are you sure to clear the last call history?</string>
    <string name="clear_success">Clear Success</string>
    <string name="clearing">Clear...</string>
    <string name="bindering">Binding...</string>
    <string name="saving">Saving...</string>
    <string name="click_refresh">Touch the screen to refresh</string>
    <string name="comming_vibrate">Call vibration</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_clear">Are you sure to empty?</string>
    <string name="confirm_clear_chat">Are you sure to empty?</string>
    <string name="confirm_delete">Confirm to delete?</string>
    <string name="confirm_exit">Are you sure to quit?</string>
    <string name="conn_fail">Connection Failed</string>
    <string name="connecting_to">Connecting</string>
    <string name="contact_already_exist">The device already exists</string>
    <string name="contact_name">Device nickname</string>
    <string name="contact_pwd">Device password</string>
    <string name="control">Set</string>
    <string name="courtyard">Patio</string>
    <string name="create_pwd">Please enter the device password</string>
    <string name="create_pwd_prompt">The current device does not have a password set. Please create a new password</string>
    <string name="current_version">Current Version</string>
    <string name="current_version_is">The current version is</string>
    <string name="customize">Custom</string>
    <string name="day">Day</string>
    <string name="defence">Defence</string>
    <string name="defence_area_control">Defence area control</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Deleteaccount</string>
    <string name="delete_alarm_id">Delete Alarm ID</string>
    <string name="delete_alarm_records">Delete alarm records</string>
    <string name="delete_contact">Remove Device</string>
    <string name="delete_sys_messages">Delete System Message</string>
    <string name="device">Add to the device list</string>
    <string name="device_info">Device Information</string>
    <string name="device_is_latest_version">The current device is the latest version</string>
    <string name="device_time">Equipment Time</string>
    <string name="device_unsupport_defence_area">The current device does not support zones</string>
    <string name="differentpassword">The password entered twice is inconsistent</string>
    <string name="door_lock">Lock</string>
    <string name="down_device_update">Downloading</string>
    <string name="down_fault">Download Failed</string>
    <string name="download">Downloading...</string>
    <string name="edit">Edit</string>
    <string name="email_format_error">Email format is incorrect</string>
    <string name="email_login">E-mail/ID Login</string>
    <string name="email_too_long">The mailbox length must be 5-31 characters</string>
    <string name="email_used">E-mail is already registered</string>
    <string name="end_time">End Time</string>
    <string name="ensure">Ensure</string>
    <string name="ensure_cancel_shield">Ensure cancel shield</string>
    <string name="ensure_delete">Ensure Delete</string>
    <string name="exit">Exit</string>
    <string name="forget_pwd">Forgot password?</string>
    <string name="format_error">Wrong format</string>
    <string name="friend">Add to the device list</string>
    <string name="gallery">Phone Album</string>
    <string name="get_phone_code_too_times">Get your phone verification code. Please try again later</string>
    <string name="hall">Hall</string>
    <string name="has_been_learning">Has been learning</string>
    <string name="hour">Hour</string>
    <string name="hungup">Hungup</string>
    <string name="id_disabled">The id of the opponent is disabled</string>
    <string name="input_new_pwd">Please enter a new password</string>
    <string name="find_by_phone">By Phone</string>
    <string name="find_by_email">By Email</string>
    <string name="back">Back</string>
    <string name="message_send">Content</string>
    <string name="message_get">Receive content</string>
    <string name="send_1">Send1</string>
    <string name="send_2">Send2</string>
    <string name="send_3">Send3</string>
    <string name="send_4">Send4</string>
    <string name="disconnect">Disconnect</string>
    <string name="repeat">Repeat</string>
    <string name="please_load_emai_relive">Email has been sent. Please log in to the mailbox to activate.</string>
    <string name="enter_new_psw_again">Re-enter new password</string>
    <string name="find">Find Back</string>
</resources>