<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/email_activite_layout_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/dao_hang_lan"
        >

        <TextView
            android:id="@+id/email_activite_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/email_register"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </RelativeLayout>
	
    

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/email_activite_layout_title"
		android:background="@color/shou_ye_bg"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/email_activite_tv" 
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/please_load_emai_relive"
            />
        
        <Button 
	        android:id="@+id/email_activite_btn"
	        android:layout_width="250dp"
	        android:layout_centerInParent="true"
	        android:layout_height="40dp"
	        android:layout_below="@id/email_activite_tv"
	        android:text="@string/already_activite_btn"
	        android:background="@drawable/login_button"
        />
    </RelativeLayout>
    
</RelativeLayout>