<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/diy_timer_Rela"
    android:layout_alignParentBottom="true"
   	android:visibility="gone"
    >
  	<ImageView
  	    android:id="@+id/image_view" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_image_color"
        />
  	<LinearLayout
	    android:id="@+id/diy_list" 
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/diy_li"
	    android:orientation="vertical"
	    android:layout_centerInParent="true"
	    android:background="@drawable/more_control_btn"
    	>
    	<TextView
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:text="@string/repeat"
	  	    android:layout_margin="15dp"
	  	     android:textColor="#000000"
	  	    android:layout_gravity="center"
	  	    android:textSize="17sp"
  	    />
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="0.5dp"
    	    android:background="#7f7f7f"
    	    />
    	<ListView
		    android:id="@+id/diy_timer_list" 
		    android:layout_width="wrap_content"
		    android:layout_height="300dp"
		    android:divider="#000000"
	    >   
    	</ListView>
    </LinearLayout>	
    <LinearLayout
        android:id="@+id/diy_li" 
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
		<Button
		    android:id="@+id/diy_cancel_btn" 
		    android:layout_width="80dp"
		    android:layout_height="40dp"
		    android:layout_marginRight="20dp"
		    android:background="@drawable/more_control_btn"
		    android:text="@string/cancel"
		    />
		<Button
		    android:id="@+id/diy_confire_btn" 
		    android:layout_width="80dp"
		    android:layout_height="40dp"
		    android:background="@drawable/more_control_btn"
		    android:layout_marginLeft="20dp"
		    android:text="@string/confirm"
		    />
	</LinearLayout>
</RelativeLayout>